--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
       <version>2.18.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.scribejava</groupId>
+      <artifactId>scribejava-core</artifactId>
+      <version>8.3.3</version>
+    </dependency>
 
   </dependencies>
 </project>
